--- a/LAM/html/login.html
+++ b/LAM/html/login.html
@@ -14,36 +14,39 @@
     <section>
       <div class="form">
         <div class="form-container">
-          <div>
-            <h2>Login Form</h2>
+          <div class="form-image">
+            <img src="../images/roadside-service.png" alt="" />
           </div>
-          <div class="input">
-            <input type="text" placeholder="Name" />
-            <input type="email" placeholder="Email" />
-            <input type="password" placeholder="Password" />
-            <a
-              href="../html/forgotPwd.html"
-              style="color: white; margin-left: 90px"
-              >Forget password?
-            </a>
-          </div>
-          <button class="login">Login</button>
-          <p>Or login with</p>
-          <div class="social-media-btn">
-            <button class="email-btn">
-              <a href="https://mail.google.com/"
-                ><i class="fa-brands fa-google fa-l"></i
-              ></a>
-            </button>
-            <button class="insta-btn">
-              <a href="https://www.facebook.com/"
-                ><i class="fa-brands fa-facebook fa-l"></i
-              ></a>
-            </button>
-          </div>
-          <div class="Signup">
-            <p>Don't have an account?</p>
-            <a href="#">Signup Now</a>
+          <div class="form-containt">
+            <div>
+              <h1>Login Form</h1>
+            </div>
+            <div class="input">
+              <input type="text" placeholder="Name" />
+              <input type="email" placeholder="Email" />
+              <input type="password" placeholder="Password" />
+              <a href="../html/forgotPwd.html" style="margin-left: 90px"
+                >Forget password?
+              </a>
+            </div>
+            <button class="login">Login</button>
+            <p>Or login with</p>
+            <div class="social-media-btn">
+              <button class="email-btn">
+                <a href="https://mail.google.com/"
+                  ><i class="fa-brands fa-google fa-l"></i
+                ></a>
+              </button>
+              <button class="insta-btn">
+                <a href="https://www.facebook.com/"
+                  ><i class="fa-brands fa-facebook fa-l"></i
+                ></a>
+              </button>
+            </div>
+            <div class="Signup">
+              <p>Don't have an account?</p>
+              <a href="#">Signup Now</a>
+            </div>
           </div>
         </div>
       </div>
