some changes in forgot link

--- a/LAM/html/login.html
+++ b/LAM/html/login.html
@@ -25,7 +25,13 @@
               <input type="text" placeholder="Name" />
               <input type="email" placeholder="Email" />
               <input type="password" placeholder="Password" />
-              <a href="../html/forgotPwd.html" style="margin-left: 90px"
+              <a
+                href="../html/forgotPwd.html"
+                style="
+                  margin-left: 90px;
+                  text-decoration: none;
+                  color: rgba(1, 44, 10, 0.933);
+                "
                 >Forget password?
               </a>
             </div>
